force-app/main/default/objects/TestQuestion__c/TestQuestion__c.object-meta.xml
<CustomObject>
    <label>Test Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>