force-app/main/default/objects/TestQuestion__c/fields/Employee_Test__c.field-meta.xml
<CustomField>
    <fullName>Employee_Test__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Test</label>
    <referenceTo>EmployeeTest__c</referenceTo>
    <relationshipName>TestQuestions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>