force-app/main/default/objects/TestQuestion__c/fields/NumberAnswers__c.field-meta.xml
<CustomField>
    <fullName>NumberAnswers__c</fullName>
    <label>Number Answers</label>
    <summaryForeignKey>TestQuestionAnswer__c.TestQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>