force-app/main/default/objects/TestQuestion__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <label>Question Text</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>