force-app/main/default/objects/TestQuestion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>First level</fullName>
                <default>true</default>
                <label>First level</label>
            </value>
            <value>
                <fullName>Second level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>